// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Item component render item 1`] = `
<Fragment>
  <Link
    style={
      Object {
        "textDecoration": "none",
      }
    }
    to="/items/1"
  >
    <div
      className="item"
    >
      <div
        className="item-img"
      >
        <img
          src="http://dummyimage.com/400x400/000/fff?text=men1"
        />
      </div>
      <div
        className="item-detail"
      >
        <div>
           
          men1
           
        </div>
        <div
          className="item-price"
        >
          <span>
              ¥ 
            51
             
          </span>
          <span>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f004",
                    "M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z",
                  ],
                  "iconName": "heart",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <span>
               
              91
               
            </span>
          </span>
        </div>
      </div>
    </div>
  </Link>
</Fragment>
`;

exports[`Item component render soldout item 1`] = `
<Fragment>
  <Link
    style={
      Object {
        "textDecoration": "none",
      }
    }
    to="/items/1"
  >
    <div
      className="item"
    >
      <div
        className="item-img"
      >
        <img
          src="http://dummyimage.com/400x400/000/fff?text=men1"
        />
        <SoldOut />
      </div>
      <div
        className="item-detail"
      >
        <div>
           
          men1
           
        </div>
        <div
          className="item-price"
        >
          <span>
              ¥ 
            51
             
          </span>
          <span>
            <FontAwesomeIcon
              border={false}
              className=""
              fixedWidth={false}
              flip={null}
              icon={
                Object {
                  "icon": Array [
                    512,
                    512,
                    Array [],
                    "f004",
                    "M462.3 62.6C407.5 15.9 326 24.3 275.7 76.2L256 96.5l-19.7-20.3C186.1 24.3 104.5 15.9 49.7 62.6c-62.8 53.6-66.1 149.8-9.9 207.9l193.5 199.8c12.5 12.9 32.8 12.9 45.3 0l193.5-199.8c56.3-58.1 53-154.3-9.8-207.9z",
                  ],
                  "iconName": "heart",
                  "prefix": "fas",
                }
              }
              inverse={false}
              listItem={false}
              mask={null}
              pull={null}
              pulse={false}
              rotation={null}
              size={null}
              spin={false}
              symbol={false}
              title=""
              transform={null}
            />
            <span>
               
              91
               
            </span>
          </span>
        </div>
      </div>
    </div>
  </Link>
</Fragment>
`;
